--- a/k8s/configmaps.yaml
+++ b/k8s/configmaps.yaml
@@ -10,6 +10,8 @@ data:
   AZURE_STORAGE_CONTAINER_NAME: "s224252426"
   AZURE_SAS_TOKEN_EXPIRY_HOURS: "24"
 
+  RABBITMQ_HOST: rabbitmq-service-w10-aks
+
   # Internal Service URLs (Kubernetes Service Names for inter-service communication)
   # These are how your microservices will talk to each other within the cluster.
   PRODUCT_SERVICE_URL: http://product-service-w10-aks:8000
